ISCS3023/WebApp/kubernetes-manifests/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: webapp
  labels:
    name: webapp
    environment: minikube
