ISCS3023/WebApp/kubernetes-manifests/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-service
  namespace: webapp
  labels:
    app: webapp-postgres
spec:
  selector:
    app: webapp-postgres
  ports:
  - port: 5432
    targetPort: 5432
  type: ClusterIP
